tests/typechecker/should_pass/type_annotation_order.csp
datatype X = Y

f :: (X, X) -> Bool
f(x, y) = x == y
