tests/typechecker/should_fail/type_annotations_1.csp
f :: (Event =>* b) -> Event =>* b
f(x) = x 
